--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-torch==2.0.1 
-torchaudio==2.0.2 
-torchvision==0.15.2
-"espnet[all]"
+speechbrain==0.5.14
+soundfile==0.12.1
+streamlit==1.24.1
+pydub==0.25.1
+SpeechRecognition==3.10.0
