--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,10 @@ soundfile==0.12.1
 streamlit==1.24.1
 pydub==0.25.1
 SpeechRecognition==3.10.0
-vosk==0.3.45
 streamlit-audiorecorder==0.0.2
+librosa == 0.10.0.post2
+moviepy == 1.0.3
+pydub == 0.25.1
+pytube == 15.0.0
+pytube3 == 9.6.4
+
